discussion/kv_engine/161740/161740_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace CM::queueLock

Change-Id: Ic325a1090de0debd8e54aa5f85b16648b9a24570

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-17 05:28:39.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-17 05:56:29.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34109/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34109/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12544/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "CheckpointVisitor::visitBucket");
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12544/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14919/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22416/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22416/ )

Timeout of a CTest test [2021-09-17T05:48:20.071Z]   7/412 Test #205: ep-engine_ep_unit_tests.FullAndValueEvictionOnReplicaAndPending/RollbackTest ................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22416/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40062/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2213/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14409/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14162/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2187/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
